# bourdain

./: .gitignore  README.md  pyproject.toml
config/: items.yaml
src/: bot.py  config.py  instacart.py  main.py  parser.py  transcriber.py
